parser.output
Terminals which are not used

   TOKEN_EOF
   TOKEN_UNKNOWN
   TOKEN_CONMMENT
   TOKEN_LCONMEN
   TOKEN_RCONMEN
   TOKEN_NARRAY
   TOKEN_NOT_EQUAL
   TOKEN_GREATER_EQ
   TOKEN_LESS_EQ
   TOKEN_GREATER


Grammar

    0 $accept: program $end

    1 program: expr

    2 expr: TOKEN_LET TOKEN_IDENTIFIER TOKEN_ASIG expr TOKEN_IN expr
    3     | TOKEN_VAL TOKEN_IDENTIFIER TOKEN_ASIG expr
    4     | or_expr

    5 or_expr: or_expr TOKEN_OR xor_expr
    6        | xor_expr

    7 xor_expr: xor_expr TOKEN_XOR and_expr
    8         | and_expr

    9 and_expr: and_expr TOKEN_AND equality_expr
   10         | equality_expr

   11 equality_expr: equality_expr TOKEN_EQUAL relational_expr
   12              | equality_expr TOKEN_NOTEQUAL relational_expr
   13              | relational_expr

   14 relational_expr: relational_expr TOKEN_LESS concat_expr
   15                | relational_expr TOKEN_GREAT concat_expr
   16                | relational_expr TOKEN_LESSEQL concat_expr
   17                | relational_expr TOKEN_GREATEQL concat_expr
   18                | concat_expr

   19 concat_expr: concat_expr TOKEN_CONCAT additive_expr
   20            | concat_expr TOKEN_ADD_ARRAY additive_expr
   21            | concat_expr TOKEN_DEL_ARRAY additive_expr
   22            | additive_expr

   23 additive_expr: additive_expr TOKEN_ADD multiplicative_expr
   24              | additive_expr TOKEN_SUBSTRACT multiplicative_expr
   25              | multiplicative_expr

   26 multiplicative_expr: multiplicative_expr TOKEN_MULTIPLY unary_expr
   27                    | multiplicative_expr TOKEN_DIVIDE unary_expr
   28                    | multiplicative_expr TOKEN_MOD unary_expr
   29                    | unary_expr

   30 unary_expr: TOKEN_NOT unary_expr
   31           | TOKEN_SUBSTRACT unary_expr
   32           | primary_expr

   33 primary_expr: TOKEN_LPAREN expr TOKEN_RPAREN
   34             | literal
   35             | function_call
   36             | TOKEN_IDENTIFIER
   37             | TOKEN_FUN TOKEN_IDENTIFIER TOKEN_LPAREN TOKEN_IDENTIFIER TOKEN_RPAREN expr TOKEN_END

   38 literal: TOKEN_INT
   39        | TOKEN_REAL
   40        | TOKEN_STRING
   41        | TOKEN_TRUE
   42        | TOKEN_FALSE
   43        | array_literal
   44        | pair_literal

   45 array_literal: TOKEN_LCORCH elements TOKEN_RCORCH
   46              | TOKEN_LCORCH TOKEN_RCORCH

   47 elements: elements TOKEN_COMA expr
   48         | expr

   49 pair_literal: TOKEN_LPAREN expr TOKEN_COMA expr TOKEN_RPAREN

   50 function_call: TOKEN_PRINT TOKEN_LPAREN expr TOKEN_RPAREN
   51              | TOKEN_FST TOKEN_LPAREN expr TOKEN_RPAREN
   52              | TOKEN_SND TOKEN_LPAREN expr TOKEN_RPAREN
   53              | TOKEN_ETOS TOKEN_LPAREN expr TOKEN_RPAREN
   54              | TOKEN_RTOS TOKEN_LPAREN expr TOKEN_RPAREN
   55              | TOKEN_ETOR TOKEN_LPAREN expr TOKEN_RPAREN
   56              | TOKEN_RTOE TOKEN_LPAREN expr TOKEN_RPAREN
   57              | TOKEN_PAIR TOKEN_LPAREN expr TOKEN_COMA expr TOKEN_RPAREN
   58              | if_expression
   59              | TOKEN_EMPTY
   60              | TOKEN_IDENTIFIER TOKEN_LPAREN expr TOKEN_RPAREN
   61              | TOKEN_HEAD TOKEN_LPAREN expr TOKEN_RPAREN
   62              | TOKEN_TAIL TOKEN_LPAREN expr TOKEN_RPAREN
   63              | TOKEN_ADD_ARRAY TOKEN_LPAREN expr TOKEN_COMA expr TOKEN_RPAREN
   64              | TOKEN_DEL_ARRAY TOKEN_LPAREN expr TOKEN_COMA expr TOKEN_RPAREN

   65 if_expression: TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN expr TOKEN_ELSE expr TOKEN_END


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_EOF (258)
TOKEN_IF (259) 65
TOKEN_ELSE (260) 65
TOKEN_CONCAT (261) 19
TOKEN_RTOS (262) 54
TOKEN_ETOS (263) 53
TOKEN_ETOR (264) 55
TOKEN_RTOE (265) 56
TOKEN_EMPTY (266) 59
TOKEN_HEAD (267) 61
TOKEN_TAIL (268) 62
TOKEN_ASIG (269) 2 3
TOKEN_ADD (270) 23
TOKEN_SUBSTRACT (271) 24 31
TOKEN_MULTIPLY (272) 26
TOKEN_DIVIDE (273) 27
TOKEN_MOD (274) 28
TOKEN_AND (275) 9
TOKEN_OR (276) 5
TOKEN_NOT (277) 30
TOKEN_XOR (278) 7
TOKEN_VAL (279) 3
TOKEN_LET (280) 2
TOKEN_TRUE (281) 41
TOKEN_FALSE (282) 42
TOKEN_INT (283) 38
TOKEN_REAL (284) 39
TOKEN_STRING (285) 40
TOKEN_FUN (286) 37
TOKEN_IN (287) 2
TOKEN_IDENTIFIER (288) 2 3 36 37 60
TOKEN_UNKNOWN (289)
TOKEN_LPAREN (290) 33 37 49 50 51 52 53 54 55 56 57 60 61 62 63 64
    65
TOKEN_RPAREN (291) 33 37 49 50 51 52 53 54 55 56 57 60 61 62 63 64
    65
TOKEN_LCORCH (292) 45 46
TOKEN_RCORCH (293) 45 46
TOKEN_PAIR (294) 57
TOKEN_FST (295) 51
TOKEN_SND (296) 52
TOKEN_LESS (297) 14
TOKEN_GREAT (298) 15
TOKEN_LESSEQL (299) 16
TOKEN_GREATEQL (300) 17
TOKEN_NOTEQUAL (301) 12
TOKEN_EQUAL (302) 11
TOKEN_CONMMENT (303)
TOKEN_LCONMEN (304)
TOKEN_RCONMEN (305)
TOKEN_COMA (306) 47 49 57 63 64
TOKEN_END (307) 37 65
TOKEN_PRINT (308) 50
TOKEN_DEL_ARRAY (309) 21 64
TOKEN_ADD_ARRAY (310) 20 63
TOKEN_NARRAY (311)
TOKEN_NOT_EQUAL (312)
TOKEN_GREATER_EQ (313)
TOKEN_LESS_EQ (314)
TOKEN_GREATER (315)


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
program (62)
    on left: 1, on right: 0
expr (63)
    on left: 2 3 4, on right: 1 2 3 33 37 47 48 49 50 51 52 53 54 55
    56 57 60 61 62 63 64 65
or_expr (64)
    on left: 5 6, on right: 4 5
xor_expr (65)
    on left: 7 8, on right: 5 6 7
and_expr (66)
    on left: 9 10, on right: 7 8 9
equality_expr (67)
    on left: 11 12 13, on right: 9 10 11 12
relational_expr (68)
    on left: 14 15 16 17 18, on right: 11 12 13 14 15 16 17
concat_expr (69)
    on left: 19 20 21 22, on right: 14 15 16 17 18 19 20 21
additive_expr (70)
    on left: 23 24 25, on right: 19 20 21 22 23 24
multiplicative_expr (71)
    on left: 26 27 28 29, on right: 23 24 25 26 27 28
unary_expr (72)
    on left: 30 31 32, on right: 26 27 28 29 30 31
primary_expr (73)
    on left: 33 34 35 36 37, on right: 32
literal (74)
    on left: 38 39 40 41 42 43 44, on right: 34
array_literal (75)
    on left: 45 46, on right: 43
elements (76)
    on left: 47 48, on right: 45 47
pair_literal (77)
    on left: 49, on right: 44
function_call (78)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64,
    on right: 35
if_expression (79)
    on left: 65, on right: 58


state 0

    0 $accept: . program $end

    TOKEN_IF          shift, and go to state 1
    TOKEN_RTOS        shift, and go to state 2
    TOKEN_ETOS        shift, and go to state 3
    TOKEN_ETOR        shift, and go to state 4
    TOKEN_RTOE        shift, and go to state 5
    TOKEN_EMPTY       shift, and go to state 6
    TOKEN_HEAD        shift, and go to state 7
    TOKEN_TAIL        shift, and go to state 8
    TOKEN_SUBSTRACT   shift, and go to state 9
    TOKEN_NOT         shift, and go to state 10
    TOKEN_VAL         shift, and go to state 11
    TOKEN_LET         shift, and go to state 12
    TOKEN_TRUE        shift, and go to state 13
    TOKEN_FALSE       shift, and go to state 14
    TOKEN_INT         shift, and go to state 15
    TOKEN_REAL        shift, and go to state 16
    TOKEN_STRING      shift, and go to state 17
    TOKEN_FUN         shift, and go to state 18
    TOKEN_IDENTIFIER  shift, and go to state 19
    TOKEN_LPAREN      shift, and go to state 20
    TOKEN_LCORCH      shift, and go to state 21
    TOKEN_PAIR        shift, and go to state 22
    TOKEN_FST         shift, and go to state 23
    TOKEN_SND         shift, and go to state 24
    TOKEN_PRINT       shift, and go to state 25
    TOKEN_DEL_ARRAY   shift, and go to state 26
    TOKEN_ADD_ARRAY   shift, and go to state 27

    program              go to state 28
    expr                 go to state 29
    or_expr              go to state 30
    xor_expr             go to state 31
    and_expr             go to state 32
    equality_expr        go to state 33
    relational_expr      go to state 34
    concat_expr          go to state 35
    additive_expr        go to state 36
    multiplicative_expr  go to state 37
    unary_expr           go to state 38
    primary_expr         go to state 39
    literal              go to state 40
    array_literal        go to state 41
    pair_literal         go to state 42
    function_call        go to state 43
    if_expression        go to state 44


state 1

   65 if_expression: TOKEN_IF . TOKEN_LPAREN expr TOKEN_RPAREN expr TOKEN_ELSE expr TOKEN_END

    TOKEN_LPAREN  shift, and go to state 45


state 2

   54 function_call: TOKEN_RTOS . TOKEN_LPAREN expr TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 46


state 3

   53 function_call: TOKEN_ETOS . TOKEN_LPAREN expr TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 47


state 4

   55 function_call: TOKEN_ETOR . TOKEN_LPAREN expr TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 48


state 5

   56 function_call: TOKEN_RTOE . TOKEN_LPAREN expr TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 49


state 6

   59 function_call: TOKEN_EMPTY .

    $default  reduce using rule 59 (function_call)


state 7

   61 function_call: TOKEN_HEAD . TOKEN_LPAREN expr TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 50


state 8

   62 function_call: TOKEN_TAIL . TOKEN_LPAREN expr TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 51


state 9

   31 unary_expr: TOKEN_SUBSTRACT . unary_expr

    TOKEN_IF          shift, and go to state 1
    TOKEN_RTOS        shift, and go to state 2
    TOKEN_ETOS        shift, and go to state 3
    TOKEN_ETOR        shift, and go to state 4
    TOKEN_RTOE        shift, and go to state 5
    TOKEN_EMPTY       shift, and go to state 6
    TOKEN_HEAD        shift, and go to state 7
    TOKEN_TAIL        shift, and go to state 8
    TOKEN_SUBSTRACT   shift, and go to state 9
    TOKEN_NOT         shift, and go to state 10
    TOKEN_TRUE        shift, and go to state 13
    TOKEN_FALSE       shift, and go to state 14
    TOKEN_INT         shift, and go to state 15
    TOKEN_REAL        shift, and go to state 16
    TOKEN_STRING      shift, and go to state 17
    TOKEN_FUN         shift, and go to state 18
    TOKEN_IDENTIFIER  shift, and go to state 19
    TOKEN_LPAREN      shift, and go to state 20
    TOKEN_LCORCH      shift, and go to state 21
    TOKEN_PAIR        shift, and go to state 22
    TOKEN_FST         shift, and go to state 23
    TOKEN_SND         shift, and go to state 24
    TOKEN_PRINT       shift, and go to state 25
    TOKEN_DEL_ARRAY   shift, and go to state 26
    TOKEN_ADD_ARRAY   shift, and go to state 27

    unary_expr     go to state 52
    primary_expr   go to state 39
    literal        go to state 40
    array_literal  go to state 41
    pair_literal   go to state 42
    function_call  go to state 43
    if_expression  go to state 44


state 10

   30 unary_expr: TOKEN_NOT . unary_expr

    TOKEN_IF          shift, and go to state 1
    TOKEN_RTOS        shift, and go to state 2
    TOKEN_ETOS        shift, and go to state 3
    TOKEN_ETOR        shift, and go to state 4
    TOKEN_RTOE        shift, and go to state 5
    TOKEN_EMPTY       shift, and go to state 6
    TOKEN_HEAD        shift, and go to state 7
    TOKEN_TAIL        shift, and go to state 8
    TOKEN_SUBSTRACT   shift, and go to state 9
    TOKEN_NOT         shift, and go to state 10
    TOKEN_TRUE        shift, and go to state 13
    TOKEN_FALSE       shift, and go to state 14
    TOKEN_INT         shift, and go to state 15
    TOKEN_REAL        shift, and go to state 16
    TOKEN_STRING      shift, and go to state 17
    TOKEN_FUN         shift, and go to state 18
    TOKEN_IDENTIFIER  shift, and go to state 19
    TOKEN_LPAREN      shift, and go to state 20
    TOKEN_LCORCH      shift, and go to state 21
    TOKEN_PAIR        shift, and go to state 22
    TOKEN_FST         shift, and go to state 23
    TOKEN_SND         shift, and go to state 24
    TOKEN_PRINT       shift, and go to state 25
    TOKEN_DEL_ARRAY   shift, and go to state 26
    TOKEN_ADD_ARRAY   shift, and go to state 27

    unary_expr     go to state 53
    primary_expr   go to state 39
    literal        go to state 40
    array_literal  go to state 41
    pair_literal   go to state 42
    function_call  go to state 43
    if_expression  go to state 44


state 11

    3 expr: TOKEN_VAL . TOKEN_IDENTIFIER TOKEN_ASIG expr

    TOKEN_IDENTIFIER  shift, and go to state 54


state 12

    2 expr: TOKEN_LET . TOKEN_IDENTIFIER TOKEN_ASIG expr TOKEN_IN expr

    TOKEN_IDENTIFIER  shift, and go to state 55


state 13

   41 literal: TOKEN_TRUE .

    $default  reduce using rule 41 (literal)


state 14

   42 literal: TOKEN_FALSE .

    $default  reduce using rule 42 (literal)


state 15

   38 literal: TOKEN_INT .

    $default  reduce using rule 38 (literal)


state 16

   39 literal: TOKEN_REAL .

    $default  reduce using rule 39 (literal)


state 17

   40 literal: TOKEN_STRING .

    $default  reduce using rule 40 (literal)


state 18

   37 primary_expr: TOKEN_FUN . TOKEN_IDENTIFIER TOKEN_LPAREN TOKEN_IDENTIFIER TOKEN_RPAREN expr TOKEN_END

    TOKEN_IDENTIFIER  shift, and go to state 56


state 19

   36 primary_expr: TOKEN_IDENTIFIER .
   60 function_call: TOKEN_IDENTIFIER . TOKEN_LPAREN expr TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 57

    $default  reduce using rule 36 (primary_expr)


state 20

   33 primary_expr: TOKEN_LPAREN . expr TOKEN_RPAREN
   49 pair_literal: TOKEN_LPAREN . expr TOKEN_COMA expr TOKEN_RPAREN

    TOKEN_IF          shift, and go to state 1
    TOKEN_RTOS        shift, and go to state 2
    TOKEN_ETOS        shift, and go to state 3
    TOKEN_ETOR        shift, and go to state 4
    TOKEN_RTOE        shift, and go to state 5
    TOKEN_EMPTY       shift, and go to state 6
    TOKEN_HEAD        shift, and go to state 7
    TOKEN_TAIL        shift, and go to state 8
    TOKEN_SUBSTRACT   shift, and go to state 9
    TOKEN_NOT         shift, and go to state 10
    TOKEN_VAL         shift, and go to state 11
    TOKEN_LET         shift, and go to state 12
    TOKEN_TRUE        shift, and go to state 13
    TOKEN_FALSE       shift, and go to state 14
    TOKEN_INT         shift, and go to state 15
    TOKEN_REAL        shift, and go to state 16
    TOKEN_STRING      shift, and go to state 17
    TOKEN_FUN         shift, and go to state 18
    TOKEN_IDENTIFIER  shift, and go to state 19
    TOKEN_LPAREN      shift, and go to state 20
    TOKEN_LCORCH      shift, and go to state 21
    TOKEN_PAIR        shift, and go to state 22
    TOKEN_FST         shift, and go to state 23
    TOKEN_SND         shift, and go to state 24
    TOKEN_PRINT       shift, and go to state 25
    TOKEN_DEL_ARRAY   shift, and go to state 26
    TOKEN_ADD_ARRAY   shift, and go to state 27

    expr                 go to state 58
    or_expr              go to state 30
    xor_expr             go to state 31
    and_expr             go to state 32
    equality_expr        go to state 33
    relational_expr      go to state 34
    concat_expr          go to state 35
    additive_expr        go to state 36
    multiplicative_expr  go to state 37
    unary_expr           go to state 38
    primary_expr         go to state 39
    literal              go to state 40
    array_literal        go to state 41
    pair_literal         go to state 42
    function_call        go to state 43
    if_expression        go to state 44


state 21

   45 array_literal: TOKEN_LCORCH . elements TOKEN_RCORCH
   46              | TOKEN_LCORCH . TOKEN_RCORCH

    TOKEN_IF          shift, and go to state 1
    TOKEN_RTOS        shift, and go to state 2
    TOKEN_ETOS        shift, and go to state 3
    TOKEN_ETOR        shift, and go to state 4
    TOKEN_RTOE        shift, and go to state 5
    TOKEN_EMPTY       shift, and go to state 6
    TOKEN_HEAD        shift, and go to state 7
    TOKEN_TAIL        shift, and go to state 8
    TOKEN_SUBSTRACT   shift, and go to state 9
    TOKEN_NOT         shift, and go to state 10
    TOKEN_VAL         shift, and go to state 11
    TOKEN_LET         shift, and go to state 12
    TOKEN_TRUE        shift, and go to state 13
    TOKEN_FALSE       shift, and go to state 14
    TOKEN_INT         shift, and go to state 15
    TOKEN_REAL        shift, and go to state 16
    TOKEN_STRING      shift, and go to state 17
    TOKEN_FUN         shift, and go to state 18
    TOKEN_IDENTIFIER  shift, and go to state 19
    TOKEN_LPAREN      shift, and go to state 20
    TOKEN_LCORCH      shift, and go to state 21
    TOKEN_RCORCH      shift, and go to state 59
    TOKEN_PAIR        shift, and go to state 22
    TOKEN_FST         shift, and go to state 23
    TOKEN_SND         shift, and go to state 24
    TOKEN_PRINT       shift, and go to state 25
    TOKEN_DEL_ARRAY   shift, and go to state 26
    TOKEN_ADD_ARRAY   shift, and go to state 27

    expr                 go to state 60
    or_expr              go to state 30
    xor_expr             go to state 31
    and_expr             go to state 32
    equality_expr        go to state 33
    relational_expr      go to state 34
    concat_expr          go to state 35
    additive_expr        go to state 36
    multiplicative_expr  go to state 37
    unary_expr           go to state 38
    primary_expr         go to state 39
    literal              go to state 40
    array_literal        go to state 41
    elements             go to state 61
    pair_literal         go to state 42
    function_call        go to state 43
    if_expression        go to state 44


state 22

   57 function_call: TOKEN_PAIR . TOKEN_LPAREN expr TOKEN_COMA expr TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 62


state 23

   51 function_call: TOKEN_FST . TOKEN_LPAREN expr TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 63


state 24

   52 function_call: TOKEN_SND . TOKEN_LPAREN expr TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 64


state 25

   50 function_call: TOKEN_PRINT . TOKEN_LPAREN expr TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 65


state 26

   64 function_call: TOKEN_DEL_ARRAY . TOKEN_LPAREN expr TOKEN_COMA expr TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 66


state 27

   63 function_call: TOKEN_ADD_ARRAY . TOKEN_LPAREN expr TOKEN_COMA expr TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 67


state 28

    0 $accept: program . $end

    $end  shift, and go to state 68


state 29

    1 program: expr .

    $default  reduce using rule 1 (program)


state 30

    4 expr: or_expr .
    5 or_expr: or_expr . TOKEN_OR xor_expr

    TOKEN_OR  shift, and go to state 69

    $default  reduce using rule 4 (expr)


state 31

    6 or_expr: xor_expr .
    7 xor_expr: xor_expr . TOKEN_XOR and_expr

    TOKEN_XOR  shift, and go to state 70

    $default  reduce using rule 6 (or_expr)


state 32

    8 xor_expr: and_expr .
    9 and_expr: and_expr . TOKEN_AND equality_expr

    TOKEN_AND  shift, and go to state 71

    $default  reduce using rule 8 (xor_expr)


state 33

   10 and_expr: equality_expr .
   11 equality_expr: equality_expr . TOKEN_EQUAL relational_expr
   12              | equality_expr . TOKEN_NOTEQUAL relational_expr

    TOKEN_NOTEQUAL  shift, and go to state 72
    TOKEN_EQUAL     shift, and go to state 73

    $default  reduce using rule 10 (and_expr)


state 34

   13 equality_expr: relational_expr .
   14 relational_expr: relational_expr . TOKEN_LESS concat_expr
   15                | relational_expr . TOKEN_GREAT concat_expr
   16                | relational_expr . TOKEN_LESSEQL concat_expr
   17                | relational_expr . TOKEN_GREATEQL concat_expr

    TOKEN_LESS      shift, and go to state 74
    TOKEN_GREAT     shift, and go to state 75
    TOKEN_LESSEQL   shift, and go to state 76
    TOKEN_GREATEQL  shift, and go to state 77

    $default  reduce using rule 13 (equality_expr)


state 35

   18 relational_expr: concat_expr .
   19 concat_expr: concat_expr . TOKEN_CONCAT additive_expr
   20            | concat_expr . TOKEN_ADD_ARRAY additive_expr
   21            | concat_expr . TOKEN_DEL_ARRAY additive_expr

    TOKEN_CONCAT     shift, and go to state 78
    TOKEN_DEL_ARRAY  shift, and go to state 79
    TOKEN_ADD_ARRAY  shift, and go to state 80

    $default  reduce using rule 18 (relational_expr)


state 36

   22 concat_expr: additive_expr .
   23 additive_expr: additive_expr . TOKEN_ADD multiplicative_expr
   24              | additive_expr . TOKEN_SUBSTRACT multiplicative_expr

    TOKEN_ADD        shift, and go to state 81
    TOKEN_SUBSTRACT  shift, and go to state 82

    $default  reduce using rule 22 (concat_expr)


state 37

   25 additive_expr: multiplicative_expr .
   26 multiplicative_expr: multiplicative_expr . TOKEN_MULTIPLY unary_expr
   27                    | multiplicative_expr . TOKEN_DIVIDE unary_expr
   28                    | multiplicative_expr . TOKEN_MOD unary_expr

    TOKEN_MULTIPLY  shift, and go to state 83
    TOKEN_DIVIDE    shift, and go to state 84
    TOKEN_MOD       shift, and go to state 85

    $default  reduce using rule 25 (additive_expr)


state 38

   29 multiplicative_expr: unary_expr .

    $default  reduce using rule 29 (multiplicative_expr)


state 39

   32 unary_expr: primary_expr .

    $default  reduce using rule 32 (unary_expr)


state 40

   34 primary_expr: literal .

    $default  reduce using rule 34 (primary_expr)


state 41

   43 literal: array_literal .

    $default  reduce using rule 43 (literal)


state 42

   44 literal: pair_literal .

    $default  reduce using rule 44 (literal)


state 43

   35 primary_expr: function_call .

    $default  reduce using rule 35 (primary_expr)


state 44

   58 function_call: if_expression .

    $default  reduce using rule 58 (function_call)


state 45

   65 if_expression: TOKEN_IF TOKEN_LPAREN . expr TOKEN_RPAREN expr TOKEN_ELSE expr TOKEN_END
